Added catch for testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,6 @@
-add_executable(test test.cpp)
+
+set(HEADER_LIST "${PROJECT_SOURCE_DIR}/include/Calc.hpp")
+
+add_executable(test test.cpp ${HEADER_LIST})
 
 target_link_libraries(test PRIVATE calculuscpp)
